--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title> An enpty web page</title>
 	</head>
 	<body>
-		<h1> this web page is blank</h1>
+		<h1 style = "color: Blue"> this web page is blank</h1>
 		<h2> well, mostly balnk, anyway!</h2>
 	</body>
 </html>
