--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 	<body>
 		<h1 style = "color: Blue"> this web page is blank</h1>
 		<h2> well, mostly balnk, anyway!</h2>
+		<ul>
+			<li>"You may observe a lot of watching"-- Yogi Berra</li>
+		</ul>
 	</body>
 </html>
