added Han Solo quote

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<h2> well, mostly balnk, anyway!</h2>
 		<ul>
 			<li>"You may observe a lot of watching"-- Yogi Berra</li>
+			<li>"Never tell me the odds"-- Hun Solo </li>
 		</ul>
 	</body>
 </html>
