Douglas Adams quote added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<ul>
 			<li>"You may observe a lot of watching"-- Yogi Berra</li>
 			<li>"Never tell me the odds"-- Hun Solo </li>
+			<li>"Example, you know, far outweighs precept" --Thomas Jefferson </li>
+			<li>"I love deadlines" -- Douglas Adams</li>
 		</ul>
 	</body>
 </html>
