--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<li>"Never tell me the odds"-- Hun Solo </li>
 			<li>"Example, you know, far outweighs precept" --Thomas Jefferson </li>
 			<li>"I love deadlines" --Douglas Adams</li>
+			<li>"A man is but a product of his thoughts" --Mahatma Gandhi</li>
 		</ul>
 	</body>
 </html>
